# nhcrossbuild

./: .gitignore  LICENSE  README.md  flake.nix  result  test.sh  test_build_deb10
example/: CMakeLists.txt  README.md  build.sh  main.cpp  run_on_nix.sh
modules/compiler-rt/: default.nix  disable-version-script.patch
modules/libcpp/: 1.patch  2.patch  default.nix
modules/linux-deb-toolchain/: default.nix  update_pkgs.py
modules/linux-deb-toolchain/debsysroot/: default.nix  pkgs-deb10-amd64.json  pkgs-deb10-arm64.json  pkgs-deb11-amd64.json  pkgs-deb11-arm64.json  pkgs-deb11.json
modules/linux-deb10-toolchain/: default.nix
modules/linux-deb10-toolchain/deb10sysroot/: build.sh  default.nix  flake.nix.sampledebiansysroot
modules/macos-toolchain/: compiler-rt-macos-1.patch  compiler-rt-macos.nix  default.nix  libdmg-hfsplus.nix  macossdk.nix
modules/macos-toolchain/cctools-port/: apple-libdispatch-port.nix  cctools-port.nix  tpoechtrager-libtapi.nix
modules/windows-mingw-toolchain/: default.nix
modules/windowssdk/: default.nix  windowssdk_symlinks.sh
test/: test.sh
